2017-10-10  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js: 
	Add frameAncestor property to attributes.

	* tryXpath/background/try_xpath_background.js: 
	Add frameAncestor property to attributes.

	* tryXpath/pages/options.js:
	Define frameAncestorAttr variable.
	Add frameAncestor property to defaultAttributes.
	Modify this file. This file handle frameAncestor attribute.
	
	* tryXpath/pages/options.html:
	Add frame-ancestor-attribute input field.

2017-10-09  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Modify getFrameAncestry function.

2017-10-08  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Change the way to check the frameDesignation key.
	Modify getFrames function.

	* tryXpath/pages/options.js:
	Add data-tryxpath-frame attribute to defaultAttributes.
	Define frameAttr variable.
	Modify this file. This file handle the attribute related frames.

	* tryXpath/pages/options.html:
	Add frame-attribute input field.

	* tryXpath/background/try_xpath_background.js:
	Modify attributes variable.

	* tryXpath/scripts/try_xpath_content.js:
	Modify attributes variable.

	* tryXpath/popup/popup.js:
	Define changeFrameVisible function.
	Define frameHeader, frameCheckbox, frameBody and frameExpression
	variable.
	Modify collectPopupState function.
	Modify genericListener.listeners.restorePopupState function.
	Modify makeExecuteMessage function.

	* tryXpath/popup/popup.html:
	Add frame input field.

	* tryXpath/scripts/try_xpath_content.js:
	Modify genericListener.listeners.execute function.

2017-10-07  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Modify makeExecuteMessage function.

	* tryXpath/background/try_xpath_background.js:
	Modify this file. The add-on inserts css to all frames and removes
	css from all frames.
	Rename frameSpecification to frameDesignation.

	* tryXpath/scripts/try_xpath_content.js:
	Define getFrames function.